--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "rush-szw",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-active-header-links": "^1.5.2",
+    "@vuepress/plugin-medium-zoom": "^1.5.2",
+    "@vuepress/plugin-nprogress": "^1.5.2",
+    "@vuepress/plugin-back-to-top": "^1.5.2",
     "vuepress": "^1.5.2"
   }
 }
